update wine bottling procedure and linked data.

--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -13,6 +13,7 @@ arb:
         # chaptelise: "Chaptaliser"
         # clarify: "Clarifier"
         # clean: "Nettoyer"
+        # close: "Fermer"
         # consume: "Consommer"
         # cut: "Couper"
         # deliver: "Distribuer"
@@ -20,6 +21,7 @@ arb:
         # feed: "Nourrir"
         # fermentize: "Fermenter"
         # fertilize: "Fertiliser"
+        # fill: "Remplir"
         # freeze: "Congeler"
         # grind: "Broyer"
         # grow: "Se développer"
@@ -1709,6 +1711,7 @@ arb:
         # animal_preventive_medicine_admission: "Traitement préventif des maladies animales"
         # animal_production: "Productions animales"
         # blending: "Mélange"
+        # bottling: "Embouteillage"
         # cleaning: "Nettoyage"
         # consummables_addition: "Mise à niveau"
         # cultipacking: "Cultipacking"
@@ -1828,6 +1831,7 @@ arb:
         # small_equipment: "Petit matériel"
         # straw: "Paille"
         # wine: "Vin"
+        # wine_package_consumable: "Matières sèches (vin)"
         # worker: "Responsable"
       # name: "Catégories de produits"
       property_natures:
@@ -1844,6 +1848,7 @@ arb:
     product_nature_variants:
       choices:
         unit_name:
+          # 100cl_bottle: "bouteille de 100cl"
           # 100g_dose: "Dose de 100g"
           # 10ml_dose: "Dose de 10ml"
           # 12kg_bag: "Sac de 12kg"
@@ -1912,6 +1917,8 @@ arb:
         # blackcurrant_crop: "Culture de cassissier"
         # blackcurrant_seedling: "Plant de cassissier"
         # bolt: "Boulon"
+        # bordelaise_100cl_bottle: "Bouteille Bordelaise 100cl"
+        # bordelaise_75cl_bottle: "Bouteille Bordelaise 75cl"
         # bottle_75cl_wine: "Bouteille de vin (75cl)"
         # brassicaceae_fungicide: "Fongicide colza"
         # building: "Bâtiment"
@@ -1964,6 +1971,7 @@ arb:
         # coop:sorgho_ensilage_bmr_333_220mg: "Semence de sorgho ensilage bmr 333 220mg"
         # coop:super_46%_gr._vr: "super 46% COOP gr vrac"
         # coop:uree_gr_vrac: "uree gr vrac"
+        # corker: "Boucheuse"
         # corn_crop: "Culture de maïs"
         # corn_grain: "Graine de maïs"
         # corn_grain_crop: "Culture de maïs grain"
@@ -2017,6 +2025,7 @@ arb:
         # grass_silage: "Ensilage d’herbe"
         # green_compost: "Compost de déchets verts"
         # guineafowl_manure: "Fumier de pintades"
+        # hand_drawn: "Tireuse"
         # hard_wheat_crop: "Culture de blé dur"
         # hard_wheat_grain: "Graine de blé dur"
         # hard_wheat_seed_25: "Semence de blé dur - sac de 25kg"
@@ -2073,7 +2082,9 @@ arb:
         # motor_oil: "Huile moteur"
         # mower: "Faucheuse"
         # mud: "Boue"
+        # natural_cork: "Bouchon naturel"
         # natural_water: "Eau de pluie / du puit"
+        # nomacorc_cork: "Bouchon Nomacorc"
         # oenological_yeast_sc_500g: "Levure œnologique - sachet de 500g"
         # office_building: "Bureau"
         # office_building_division: "Pièce de bureau"
@@ -2202,6 +2213,7 @@ arb:
         # animal_medicine: "Produit vétérinaire"
         # animal_medicine_tank: "Reserve de médicaments"
         # baler: "Botteleuse"
+        # bottle: "Bouteille"
         # building: "Bâtiment"
         # building_division: "Pièce ou zone d’un bâtiment"
         # calf: "Veau"
@@ -2210,6 +2222,8 @@ arb:
         # chemical_fertilizer: "Engrais minéral"
         # clarification_solution: "Solution clarifiante"
         # complete_sower: "Semoir équipé"
+        # cork: "Bouchon"
+        # corker: "Boucheuse"
         # crop: "Culture"
         # cultivable_zone: "Zone cultivable"
         # duck_band: "Bande de canards"
@@ -2241,6 +2255,7 @@ arb:
         # grape_juice: "Jus de raisin"
         # grape_reaper: "Machine à vendanger"
         # grass: "Herbe"
+        # hand_drawn: "Tireuse"
         # hay_rake: "Andaineur"
         # hazel_seedling: "Plant de noisetier"
         # hen_band: "Bande de gallinacé"
@@ -2601,6 +2616,8 @@ arb:
         # betulaceae: "Betulaceae"
         # bioproduct: "Produit vivant"
         # bos: "Bovin"
+        # bottle: "Bouteille"
+        # bottling: "Embouteillage"
         # brassica: "Colza"
         # brassica_napus: "Colza"
         # brassica_nigra: "Moutarde noire"
@@ -2608,6 +2625,7 @@ arb:
         # brassicaceae: "Crucifères"
         # building: "Bâtiment"
         # building_division: "Pièce de bâtiment"
+        # cap: "Capsule"
         # capra: "Caprin"
         # chemical_fertilizer: "Engrais minéral"
         # cichorium: "Chicoré"
@@ -2615,6 +2633,8 @@ arb:
         # compost: "Compost"
         # concentrated_rectified_must: "Moût concentré rectifié"
         # corabel: "Corabel"
+        # cork: "Bouchon"
+        # cork_bottle: "Bouteille"
         # corylus: "Corylus"
         # corylus_avellana: "Corylus avellana"
         # crocus: "Crocus"
@@ -2678,6 +2698,7 @@ arb:
         # juglandaceae: "Juglandaceae"
         # juglans: "Juglans"
         # juice: "Jus"
+        # label: "Etiquette"
         # lamiaceae: "Lamiaceae"
         # land_parcel: "Parcelle physique"
         # land_parcel_cluster: "Îlot"
@@ -2713,6 +2734,7 @@ arb:
         # osteichthyes: "Poissons osseux"
         # ostreidae: "Ostreidae"
         # ovis: "Ovin"
+        # packaged_matter: "Matières composées"
         # pauetet: "Pauetet"
         # peach: "Pêche"
         # pear: "Poire"
@@ -2780,6 +2802,8 @@ arb:
         # salmo: "Salmonidé"
         # salt: "Sel"
         # sand: "Sable"
+        # screw_bottle: "Bouteille (à vis)"
+        # screw_cap: "Capsule (à vis)"
         # secale: "Secale"
         # seed: "Semence"
         # seedling: "Plant"
