--- a/config/locales/fra/procedures.yml
+++ b/config/locales/fra/procedures.yml
@@ -40,9 +40,14 @@ fra:
     adding_wine_to_blend: "Vin à assembler (mineur)"
     baler: "Botteleuse"
     baler_driver: "Conducteur (tracteur-botteleuse)"
+    bottle: "Bouteille"
+    bottle_to_use: "Bouteille à utiliser"
     caregiver: "Soigneur"
     child: "Nouveau né"
     cleaner: "Outil de nettoyage"
+    cork: "Bouchon"
+    cork_to_use: "Bouchon à utiliser"
+    corker: "Boucheuse"
     cropper: "Moissonneuse batteuse"
     cropper_driver: "Conducteur de moissonneuse batteuse"
     cultivation: "Culture"
@@ -63,6 +68,7 @@ fra:
     grass: "Herbe"
     grinded: "Résidu de culture"
     grinder: "Broyeur"
+    hand_drawn: "Tireuse"
     harrow: "Herse"
     herd: "Troupeau"
     implanter_man: "Planteur"
@@ -115,10 +121,12 @@ fra:
     trailer: "Remorque"
     wine: "Vin"
     wine_blended: "Vin assemblé"
+    wine_bottle: "Bouteille de vin"
     wine_man: "Opérateur de chai"
     wine_to_blend: "Vin à assembler"
     wine_to_move: "Vin à transférer"
     wine_to_treat: "Vin à traiter"
+    wine_to_pack: "Vin à embouteiller"
   procedures:
     base-all_in_one_sowing: "Semis 'tout-en-un'"
     base-animal_birth: "Naissance d’un animal"
@@ -159,3 +167,4 @@ fra:
     base-uncompacting: "Décompactage"
     base-wheat_crop: "Culture de blé (standard)"
     base-wine_blending: "Assemblage de vin"
+    base-wine_bottling: "Embouteillage de vin"
