--- a/config/locales/arb/procedures.yml
+++ b/config/locales/arb/procedures.yml
@@ -159,3 +159,4 @@ arb:
     # base-uncompacting: "Décompactage"
     # base-wheat_crop: "Culture de blé (standard)"
     # base-wine_blending: "Assemblage de vin"
+    # base-wine_bottling: "Embouteillage de vin"
