--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -1562,7 +1562,7 @@ fra:
         somatic_cell_concentration: "Dénombrement des cellules somatiques"
         subsoil_nature: "Type de sous-sol"
         sulfur_concentration: "Teneur en soufre"
-        sulfur_dioxyde_concentration: "Teneur en dioxyde de soufre (SO2)"
+        sulfur_dioxide_concentration: "Teneur en dioxyde de soufre (SO2)"
         temperature: "Température"
         thousand_grains_mass: "Poids de mille grains"
         tiller_count: "Nombre de talles"
@@ -3156,7 +3156,7 @@ fra:
         zone_property_title: "Titre de propriété terrienne"
     intervention:
       reference_name:
-        base-all_in_one_sowing: "Semis 'tout-en-un'"
+        base-all_in_one_sowing: "Semis «\_tout-en-un\_»"
         base-animal_birth: "Naissance d’un animal"
         base-animal_housing_cleaning: "Nettoyage de stabulation"
         base-animal_housing_mulching: "Paillage de stabulation"
@@ -3170,15 +3170,15 @@ fra:
         base-grains_harvest: "Moisson"
         base-grape_pressing: "Pressage de raisin"
         base-hoeing: "Binage"
-        base-implant: "Plantation"
+        base-implanting: "Plantation"
         base-indirect_silage: "Ensilage indirect"
         base-item_replacement: "Remplacement de pièce"
-        base-mammal_herd_milking: "Traite d'un troupeau"
-        base-mammal_milking: "Traite d'un animal"
+        base-mammal_herd_milking: "Traite d’un troupeau"
+        base-mammal_milking: "Traite d’un animal"
         base-manual_vine_harvest: "Vendange manuelle"
         base-mecanical_vine_harvest: "Vendange mécanique"
         base-mineral_fertilizing: "Fertilisation minérale"
-        base-oil_replacement: "Vidange d'huile"
+        base-oil_replacement: "Vidange d’huile"
         base-organic_fertilizing: "Fertilisation organique"
         base-partial_wine_transfer: "Transfert de vin (Partiel)"
         base-pasturing: "Pâturage"
@@ -3186,7 +3186,7 @@ fra:
         base-plant_mowing: "Fauchage"
         base-plowing: "Labour"
         base-raking: "Hersage"
-        base-silage_unload: "Alimentation d'un troupeau via désileuse"
+        base-silage_unload: "Alimentation d’un troupeau via désileuse"
         base-sowing: "Semis"
         base-spraying_on_cultivation: "Pulvérisation sur culture"
         base-straw_bunching: "Pressage de fourrages"
@@ -4632,10 +4632,10 @@ fra:
         death: "%{product} meurt"
         detachment: "On détache %{carrier} et %{carried}"
         direct_entering: "%{product} entre directement dans %{localizable}"
-        direct_movement: "%{product} va directement à l'emplacement de %{localizable}"
+        direct_movement: "%{product} va directement à l’emplacement de %{localizable}"
         division: "%{product} est séparé de %{producer}"
         entering: "%{product} entre dans %{localizable}"
-        given_home_coming: "%{product} va l'emplacement par défaut de  %{localizable}"
+        given_home_coming: "%{product} va l’emplacement par défaut de  %{localizable}"
         group_exclusion: "%{member} sort du groupe %{group}"
         group_inclusion: "%{member} entre dans le groupe %{group}"
         home_coming: "%{product} va à son emplacement par défaut"
@@ -4643,7 +4643,7 @@ fra:
         identified_outgoing_delivery: "%{product} est expédié à %{client}"
         incoming_delivery: "%{product} est réceptionné"
         merging: "%{absorber} fusionne avec %{product}"
-        movement: "%{product} va à l'emplacement de %{localizable}"
+        movement: "%{product} va à l’emplacement de %{localizable}"
         outgoing_delivery: "%{product} est expédié"
         owner_change: "%{product} change de propriétaire pout %{owner}"
         ownership_loss: "%{product} perd son propriétaire"
@@ -7743,7 +7743,7 @@ fra:
         somatic_cell_concentration: "Dénombrement des cellules somatiques"
         subsoil_nature: "Type de sous-sol"
         sulfur_concentration: "Teneur en soufre"
-        sulfur_dioxyde_concentration: "Teneur en dioxyde de soufre (SO2)"
+        sulfur_dioxide_concentration: "Teneur en dioxyde de soufre (SO2)"
         temperature: "Température"
         thousand_grains_mass: "Poids de mille grains"
         tiller_count: "Nombre de talles"
@@ -7851,7 +7851,7 @@ fra:
         somatic_cell_concentration: "Dénombrement des cellules somatiques"
         subsoil_nature: "Type de sous-sol"
         sulfur_concentration: "Teneur en soufre"
-        sulfur_dioxyde_concentration: "Teneur en dioxyde de soufre (SO2)"
+        sulfur_dioxide_concentration: "Teneur en dioxyde de soufre (SO2)"
         temperature: "Température"
         thousand_grains_mass: "Poids de mille grains"
         tiller_count: "Nombre de talles"
@@ -8272,7 +8272,7 @@ fra:
         somatic_cell_concentration: "Dénombrement des cellules somatiques"
         subsoil_nature: "Type de sous-sol"
         sulfur_concentration: "Teneur en soufre"
-        sulfur_dioxyde_concentration: "Teneur en dioxyde de soufre (SO2)"
+        sulfur_dioxide_concentration: "Teneur en dioxyde de soufre (SO2)"
         temperature: "Température"
         thousand_grains_mass: "Poids de mille grains"
         tiller_count: "Nombre de talles"
@@ -8380,7 +8380,7 @@ fra:
         somatic_cell_concentration: "Dénombrement des cellules somatiques"
         subsoil_nature: "Type de sous-sol"
         sulfur_concentration: "Teneur en soufre"
-        sulfur_dioxyde_concentration: "Teneur en dioxyde de soufre (SO2)"
+        sulfur_dioxide_concentration: "Teneur en dioxyde de soufre (SO2)"
         temperature: "Température"
         thousand_grains_mass: "Poids de mille grains"
         tiller_count: "Nombre de talles"
