--- a/config/locales/jpn/procedures.yml
+++ b/config/locales/jpn/procedures.yml
@@ -10,10 +10,10 @@ jpn:
       # death: "%{product} meurt"
       # detachment: "On détache %{carrier} et %{carried}"
       # direct_entering: "%{product} entre directement dans %{localizable}"
-      # direct_movement: "%{product} va directement à l'emplacement de %{localizable}"
+      # direct_movement: "%{product} va directement à l’emplacement de %{localizable}"
       # division: "%{product} est séparé de %{producer}"
       # entering: "%{product} entre dans %{localizable}"
-      # given_home_coming: "%{product} va l'emplacement par défaut de  %{localizable}"
+      # given_home_coming: "%{product} va l’emplacement par défaut de  %{localizable}"
       # group_exclusion: "%{member} sort du groupe %{group}"
       # group_inclusion: "%{member} entre dans le groupe %{group}"
       # home_coming: "%{product} va à son emplacement par défaut"
@@ -21,7 +21,7 @@ jpn:
       # identified_outgoing_delivery: "%{product} est expédié à %{client}"
       # incoming_delivery: "%{product} est réceptionné"
       # merging: "%{absorber} fusionne avec %{product}"
-      # movement: "%{product} va à l'emplacement de %{localizable}"
+      # movement: "%{product} va à l’emplacement de %{localizable}"
       # outgoing_delivery: "%{product} est expédié"
       # owner_change: "%{product} change de propriétaire pout %{owner}"
       # ownership_loss: "%{product} perd son propriétaire"
@@ -31,11 +31,11 @@ jpn:
   procedure_handlers:
     # dry_matter_mass: "Masse de matière sèche"
     # dry_matter_mass_area_density: "Masse de matière sèche par surface"
-    # food_mass_per_animal: "Masse d'aliment par animal"
-    # nitrogen_unities_density: "Unités d'azote par surface"
+    # food_mass_per_animal: "Masse d’aliment par animal"
+    # nitrogen_unities_density: "Unités d’azote par surface"
     # phosphorus_unities_density: "Unités de phosphore par surface"
     # potassium_unities_density: "Unités de potassium par surface"
-    # sulfur_dioxyde_density: "Gramme de SO2 par hectolitre"
+    # sulfur_dioxide_density: "Dioxyde de soufre par volume"
   procedure_variables:
     # adding_wine: "Vin (mineur)"
     # adding_wine_to_blend: "Vin à assembler (mineur)"
@@ -59,7 +59,7 @@ jpn:
     # fertilizer_to_spread: "Engrais à épandre"
     # first_child: "Premier nouveau né"
     # forager: "Ensileuse"
-    # forager_driver: "Conducteur d'ensileuse"
+    # forager_driver: "Conducteur d’ensileuse"
     # fuel: "Carburant"
     # fuel_to_input: "Carburant mis"
     # grains: "Grains"
@@ -130,7 +130,7 @@ jpn:
     # wine_to_pack: "Vin à embouteiller"
     # wine_to_treat: "Vin à traiter"
   procedures:
-    # base-all_in_one_sowing: "Semis 'tout-en-un'"
+    # base-all_in_one_sowing: "Semis «\_tout-en-un\_»"
     # base-animal_birth: "Naissance d’un animal"
     # base-animal_housing_cleaning: "Nettoyage de stabulation"
     # base-animal_housing_mulching: "Paillage de stabulation"
@@ -144,15 +144,15 @@ jpn:
     # base-grains_harvest: "Moisson"
     # base-grape_pressing: "Pressage de raisin"
     # base-hoeing: "Binage"
-    # base-implant: "Plantation"
+    # base-implanting: "Plantation"
     # base-indirect_silage: "Ensilage indirect"
     # base-item_replacement: "Remplacement de pièce"
-    # base-mammal_herd_milking: "Traite d'un troupeau"
-    # base-mammal_milking: "Traite d'un animal"
+    # base-mammal_herd_milking: "Traite d’un troupeau"
+    # base-mammal_milking: "Traite d’un animal"
     # base-manual_vine_harvest: "Vendange manuelle"
     # base-mecanical_vine_harvest: "Vendange mécanique"
     # base-mineral_fertilizing: "Fertilisation minérale"
-    # base-oil_replacement: "Vidange d'huile"
+    # base-oil_replacement: "Vidange d’huile"
     # base-organic_fertilizing: "Fertilisation organique"
     # base-partial_wine_transfer: "Transfert de vin (Partiel)"
     # base-pasturing: "Pâturage"
@@ -160,7 +160,7 @@ jpn:
     # base-plant_mowing: "Fauchage"
     # base-plowing: "Labour"
     # base-raking: "Hersage"
-    # base-silage_unload: "Alimentation d'un troupeau via désileuse"
+    # base-silage_unload: "Alimentation d’un troupeau via désileuse"
     # base-sowing: "Semis"
     # base-spraying_on_cultivation: "Pulvérisation sur culture"
     # base-straw_bunching: "Pressage de fourrages"
