Begins to introduce before-run step to sets live reading values

--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -842,16 +842,7 @@ eng:
       property_natures:
         # varieties: "Variétés"
     currencies:
-      item_lists:  #?
-        EUR: #?
- #?
-        FRF: #?
- #?
-        JPY: #?
- #?
-        USD: #?
- #?
- #?
+      item_lists: #?
       items:
         AED: "UAE Dirham"
         AFN: "Afghani"
@@ -1358,7 +1349,7 @@ eng:
         plant_life_state: "Plant life state"
         plant_reproduction_state: "Plant reproduction state"
         # plants_density: "Densité de plantation"
-        # plants_rows_interval: "Intervalle inter-rangs"
+        # plants_interval: "Intervalle inter-pieds"
         # population: "Population"
         # potash_concentration: "Teneur en potasse (K2O)"
         # potassium_concentration: "Teneur en potassium"
@@ -1368,7 +1359,8 @@ eng:
         # reference_year: "Millésime"
         # reproductor: "Reproducteur"
         # residue_elimination_method: "Méthode d’élimination des résidus"
-        # row_plants_interval: "Intervalle inter-plants"
+        # rows_interval: "Intervalle inter-rangs"
+        # rows_orientation: "Orientation des rangs"
         # sex: "Sexe"
         # shape: "Forme"
         # soil_cultural_state: "État cultural du sol"
@@ -2415,11 +2407,7 @@ eng:
         # evacuation: "Évacuation"
       # name: "Méthodes d’élimination des résidus"
     roles:
-      item_lists:  #?
-        accountant: #?
- #?
-        farm_worker: #?
- #?
+      item_lists: #?
       items:
         # accountant: "Comptable"
         # farm_worker: "Ouvrier agricole"
