--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -1543,7 +1543,7 @@ fra:
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
         plants_density: "Densité de plantation"
-        plants_rows_interval: "Intervalle inter-rangs"
+        plants_interval: "Intervalle inter-pieds"
         population: "Population"
         potash_concentration: "Teneur en potasse (K2O)"
         potassium_concentration: "Teneur en potassium"
@@ -1553,7 +1553,8 @@ fra:
         reference_year: "Millésime"
         reproductor: "Reproducteur"
         residue_elimination_method: "Méthode d’élimination des résidus"
-        row_plants_interval: "Intervalle inter-plants"
+        rows_interval: "Intervalle inter-rangs"
+        rows_orientation: "Orientation des rangs"
         sex: "Sexe"
         shape: "Forme"
         soil_cultural_state: "État cultural du sol"
@@ -7724,7 +7725,7 @@ fra:
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
         plants_density: "Densité de plantation"
-        plants_rows_interval: "Intervalle inter-rangs"
+        plants_interval: "Intervalle inter-pieds"
         population: "Population"
         potash_concentration: "Teneur en potasse (K2O)"
         potassium_concentration: "Teneur en potassium"
@@ -7734,7 +7735,8 @@ fra:
         reference_year: "Millésime"
         reproductor: "Reproducteur"
         residue_elimination_method: "Méthode d’élimination des résidus"
-        row_plants_interval: "Intervalle inter-plants"
+        rows_interval: "Intervalle inter-rangs"
+        rows_orientation: "Orientation des rangs"
         sex: "Sexe"
         shape: "Forme"
         soil_cultural_state: "État cultural du sol"
@@ -7832,7 +7834,7 @@ fra:
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
         plants_density: "Densité de plantation"
-        plants_rows_interval: "Intervalle inter-rangs"
+        plants_interval: "Intervalle inter-pieds"
         population: "Population"
         potash_concentration: "Teneur en potasse (K2O)"
         potassium_concentration: "Teneur en potassium"
@@ -7842,7 +7844,8 @@ fra:
         reference_year: "Millésime"
         reproductor: "Reproducteur"
         residue_elimination_method: "Méthode d’élimination des résidus"
-        row_plants_interval: "Intervalle inter-plants"
+        rows_interval: "Intervalle inter-rangs"
+        rows_orientation: "Orientation des rangs"
         sex: "Sexe"
         shape: "Forme"
         soil_cultural_state: "État cultural du sol"
@@ -8253,7 +8256,7 @@ fra:
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
         plants_density: "Densité de plantation"
-        plants_rows_interval: "Intervalle inter-rangs"
+        plants_interval: "Intervalle inter-pieds"
         population: "Population"
         potash_concentration: "Teneur en potasse (K2O)"
         potassium_concentration: "Teneur en potassium"
@@ -8263,7 +8266,8 @@ fra:
         reference_year: "Millésime"
         reproductor: "Reproducteur"
         residue_elimination_method: "Méthode d’élimination des résidus"
-        row_plants_interval: "Intervalle inter-plants"
+        rows_interval: "Intervalle inter-rangs"
+        rows_orientation: "Orientation des rangs"
         sex: "Sexe"
         shape: "Forme"
         soil_cultural_state: "État cultural du sol"
@@ -8361,7 +8365,7 @@ fra:
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
         plants_density: "Densité de plantation"
-        plants_rows_interval: "Intervalle inter-rangs"
+        plants_interval: "Intervalle inter-pieds"
         population: "Population"
         potash_concentration: "Teneur en potasse (K2O)"
         potassium_concentration: "Teneur en potassium"
@@ -8371,7 +8375,8 @@ fra:
         reference_year: "Millésime"
         reproductor: "Reproducteur"
         residue_elimination_method: "Méthode d’élimination des résidus"
-        row_plants_interval: "Intervalle inter-plants"
+        rows_interval: "Intervalle inter-rangs"
+        rows_orientation: "Orientation des rangs"
         sex: "Sexe"
         shape: "Forme"
         soil_cultural_state: "État cultural du sol"
