--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -785,16 +785,7 @@ arb:
       property_natures:
         # varieties: "Variétés"
     currencies:
-      item_lists:  #?
-        EUR: #?
- #?
-        FRF: #?
- #?
-        JPY: #?
- #?
-        USD: #?
- #?
- #?
+      item_lists: #?
       items:
         AED: "درهم إماراتي"
         AFN: "أفغاني"
@@ -1281,7 +1272,7 @@ arb:
         # plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         # plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
         # plants_density: "Densité de plantation"
-        # plants_rows_interval: "Intervalle inter-rangs"
+        # plants_interval: "Intervalle inter-pieds"
         # population: "Population"
         # potash_concentration: "Teneur en potasse (K2O)"
         # potassium_concentration: "Teneur en potassium"
@@ -1291,7 +1282,8 @@ arb:
         # reference_year: "Millésime"
         # reproductor: "Reproducteur"
         # residue_elimination_method: "Méthode d’élimination des résidus"
-        # row_plants_interval: "Intervalle inter-plants"
+        # rows_interval: "Intervalle inter-rangs"
+        # rows_orientation: "Orientation des rangs"
         # sex: "Sexe"
         # shape: "Forme"
         # soil_cultural_state: "État cultural du sol"
@@ -2295,11 +2287,7 @@ arb:
         # evacuation: "Évacuation"
       # name: "Méthodes d’élimination des résidus"
     roles:
-      item_lists:  #?
-        accountant: #?
- #?
-        farm_worker: #?
- #?
+      item_lists: #?
       items:
         # accountant: "Comptable"
         # farm_worker: "Ouvrier agricole"
