--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -2565,6 +2565,7 @@ arb:
         # financial_assets: "I[number|7]"
         # incoming_deliveries: "BR[year|4][number|4]"
         # incoming_payments: "R[year|4][number|6]"
+        # interventions: "[number]"
         # outgoing_deliveries: "BL[year|4][number|6]"
         # outgoing_payments: "D[year|4][number|4]"
         # plants: "PLANT[year|4][number|4]"
