--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -301,11 +301,11 @@ jpn:
       # show: "Encaissement n°%{number} de %{entity}"
     backend/intervention_casts: #?
     backend/interventions:
-      # edit: "Modifier l’intervention %{procedure_name} N°%{id}"
+      # edit: "Modifier l’intervention %{procedure_name} N°%{number}"
       # index: "Interventions"
       # new: "Nouvelle intervention"
       # run: "Exécuter l'intervention"
-      # show: "%{procedure_name} N°%{id}"
+      # show: "%{procedure_name} N°%{number}"
     backend/inventories:
       # edit: "Modifier l’inventaire"
       # index: "Inventaires"
@@ -1519,6 +1519,7 @@ jpn:
     # role: "Rôle"
     # role_name: "Entrez le nom du rôle puis attribuez lui ses droits"
     # roles: "Rôles"
+    # run: "Exécuter"
     # running_cost: "Charges d’exploitation"
     # running_finished: "Produits d’exploitation"
     # sale: "Vente"
