--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -1598,8 +1598,8 @@ jpn:
         # harvest: "Récolte"
         # haymaking: "Fenaison"
         # hoeing: "Binage"
-        # implant: "Plantation"
         # implantation: "Implantation d’une culture"
+        # implanting: "Plantation"
         # maintenance: "Maintenance"
         # milk_production: "Production laitière"
         # oviparous_birth: "Reproduction (ovipare)"
